Fixed table responsiveness on mobile

--- a/Styles/body.css
+++ b/Styles/body.css
@@ -144,7 +144,7 @@ td{
 }
 @media (max-width: 670px) {
     table{
-        margin-left: -1em;
+        margin: -1em;
     }
     .botaoComprar{
         size: 10px;
